Fix annotations being too big in the bookings page

--- a/src/styles/bookings.css
+++ b/src/styles/bookings.css
@@ -87,6 +87,7 @@
         font-size: 1.5em;
         padding-bottom: 0;
         padding-top: 0;
+        overflow: hidden;
 
         .normal {
           padding-top: 7px;
@@ -95,9 +96,10 @@
 
         .annotation {
           padding-top: 0;
-          font-size: 0.7em;
+          font-size: 0.6em;
           display: block;
           text-align: center;
+          white-space: nowrap;
           width: 100%;
         }
 
